syntax = "proto3";

package protos;

option go_package = "github.com/en/siren/protos";

service Wallet {
	rpc GetAddress (GetAddressRequest) returns (GetAddressResponse);
	rpc Withdraw (WithdrawRequest) returns (WithdrawResponse);
}

message GetAddressRequest {
	string user_id = 1;
	string currency = 2;
}

message GetAddressResponse {
	string address = 1;
}

message WithdrawRequest {
	string user_id = 1;
	string currency = 2;
	string amount = 3;
	string address = 4;
}

message WithdrawResponse {
}

service Ethereum {
	rpc GetAddress (GetAddressRequest) returns (GetAddressResponse) {}
}

service Bitcoin {
	rpc GetAddress (GetAddressRequest) returns (GetAddressResponse) {}
}
